fix image distortion mobile

--- a/portfolio-v2/src/App.css
+++ b/portfolio-v2/src/App.css
@@ -304,25 +304,22 @@ body {
 }
 
 .about-me-img-container {
-  display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  width: 300px;
 }
 
 .about-me-img {
   border-radius: 10px;
-  width: 300px;
-  display: flex;
 }
 
 .about-me-paragraph-container {
   margin: 5px;
-  padding: 15px;
+  padding: 30px;
   margin-bottom: 15%;
 }
 
 .about-me-paragraph-container p {
   font-size: 1.5rem;
-  text-align: center;
   color: #f8f6f5;
 }
 
